거리순 5개 뽑기 및 정렬 성공

--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -33,7 +33,7 @@
             android:layout_weight="1"
             android:text="축소"></Button>
         <Button
-            android:id="@+id/buttonZoomLevel10"
+            android:id="@+id/buttongps"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
