--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,5 +20,12 @@
         android:layout_height="82dp"
         android:text="경로보기"
         android:textSize="@android:dimen/app_icon_size" />
+    <Button
+        android:id="@+id/btn_map3"
+        android:layout_width="match_parent"
+        android:layout_height="82dp"
+        android:text="주위 관광지 추천"
+        android:textSize="@android:dimen/app_icon_size"/>
+
 //주석처리
 </android.widget.LinearLayout>
