--- a/app/src/main/res/layout/activity_info.xml
+++ b/app/src/main/res/layout/activity_info.xml
@@ -39,6 +39,14 @@
         android:layout_height="wrap_content"
         android:gravity="center_horizontal" />
 
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="100dp">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
     <TextView
         android:id="@+id/info_time"
         android:textSize="17dp"
@@ -56,9 +64,9 @@
         android:layout_height="wrap_content"
         android:gravity="center_horizontal" />
 
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+    </LinearLayout>
+</ScrollView>
+
   <RelativeLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent">
@@ -81,5 +89,5 @@
             android:text="찜하기 클릭!"
             />
   </RelativeLayout>
-    </ScrollView>
+
 </LinearLayout>
