--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -46,12 +46,12 @@
 <!--        android:text="주위 관광지 추천"-->
 <!--        android:textSize="@android:dimen/app_icon_size" />-->
 
-<!--    <Button-->
-<!--        android:id="@+id/button_likeslist"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:text="찜하기 목록 보기"-->
-<!--        android:textSize="25dp"-->
-<!--        />-->
+    <Button
+        android:id="@+id/button_likeslist"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="찜하기 목록 보기"
+        android:textSize="25dp"
+        />
 
 </android.widget.RelativeLayout>
