--- a/app/src/main/res/layout/activity_likes_list.xml
+++ b/app/src/main/res/layout/activity_likes_list.xml
@@ -43,7 +43,7 @@
             android:text="경로화"
             android:textSize="20dp"
             android:layout_marginBottom="30dp"
-            android:background="@android:color/holo_orange_dark"
+            android:background="@color/DarkOrange"
             android:layout_gravity="center"
             android:layout_marginTop="20dp"
             android:layout_width="wrap_content"
